@@ -1,5 +1,6 @@
 Changes in 0.60.3:
   * Reimplemented LargeStreamSet in C
+  * Added StreamCollection
 
 Changes in 0.60.2:
   * Added InitialContent flag 
